Replace broken club image with group pic

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -147,7 +147,7 @@ const pageDescription = "Join Belfast's premier table tennis club. Professional 
         <div class="relative">
           <div class="absolute -top-4 -left-4 w-full h-full border-2 border-primary rounded-3xl z-0"></div>
           <div class="relative z-10 rounded-3xl overflow-hidden shadow-2xl">
-            <img alt="Club Atmosphere" class="w-full h-full object-cover" src="https://scontent-lhr6-1.xx.fbcdn.net/v/t39.30808-6/472097205_18436817173073663_5490438834406823754_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=13d280&_nc_ohc=NcPUGWBLRykQ7kNvwHYcHbS&_nc_oc=AdkBxIzXRXgsZiA2L9q9v9Cs5gJwZMOkn0dGghQMghedUs4nKXBeeb2M61MV9KT-P_hC6noebTmdduf6-4SIvT-s&_nc_zt=23&_nc_ht=scontent-lhr6-1.xx&_nc_gid=v3cWrFyljo8BELoBx_K0Qg&oh=00_Aft3QGhV7RKypePvbZkrw2OOx1MPKEmO24JzJHh2DGjRcw&oe=69A14545"/>
+            <img alt="Club Atmosphere" class="w-full h-full object-cover" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/group%20pic%20hero%20.jpg"/>
           </div>
         </div>
       </div>
