--- a/src/pages/partners.astro
+++ b/src/pages/partners.astro
@@ -108,7 +108,7 @@ const pageImage = "https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/540735236_
   <section class="relative w-full px-4 md:px-8 pt-8 pb-12">
     <div class="mx-auto max-w-7xl">
       <div class="relative h-[400px] md:h-[500px] w-full overflow-hidden rounded-xl shadow-2xl">
-        <img alt="Club members with sponsor banners" class="h-full w-full object-cover brightness-75" src="https://scontent.fbhd1-2.fna.fbcdn.net/v/t1.6435-9/168465893_3987671477981645_7202077643737766560_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=f798df&_nc_ohc=78xQ6ACxfdAQ7kNvwFwtDH5&_nc_oc=Adlkn8XzpDEWGVpxN1xzSMHL9o3mwcCnjdCgiuCCK45IOvFr-Fl35OydLxyF-_tpT9iqBTWi9CHOTxS0fRY1cCuP&_nc_zt=23&_nc_ht=scontent.fbhd1-1.fna&_nc_gid=-0C9N0Goo3X2CdgAZnuxKg&oh=00_Aft-tO580mNbri9nEFkihjIQtPjbcRzBzosPJJJblv_tzw&oe=69C3CE52"/>
+        <img alt="Club members with sponsor banners" class="h-full w-full object-cover brightness-75" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/group%20pic%20hero%20.jpg"/>
         <div class="absolute inset-0 bg-gradient-to-t from-background-dark/80 via-transparent to-transparent flex flex-col justify-end p-8 md:p-16">
           <h1 class="max-w-3xl text-4xl font-black leading-tight text-white md:text-6xl tracking-tight">
             Empowering Sport Through <span class="text-primary">Community Support</span>
