--- a/src/pages/partners.astro
+++ b/src/pages/partners.astro
@@ -108,7 +108,7 @@ const pageImage = "https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/540735236_
   <section class="relative w-full px-4 md:px-8 pt-8 pb-12">
     <div class="mx-auto max-w-7xl">
       <div class="relative h-[400px] md:h-[500px] w-full overflow-hidden rounded-xl shadow-2xl">
-        <img alt="Club members with sponsor banners" class="h-full w-full object-cover brightness-75" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/group%20pic%20hero%20.jpg"/>
+        <img alt="Club members with sponsor banners" class="h-full w-full object-cover brightness-75" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/peadar%20mpt%20.jpg"/>
         <div class="absolute inset-0 bg-gradient-to-t from-background-dark/80 via-transparent to-transparent flex flex-col justify-end p-8 md:p-16">
           <h1 class="max-w-3xl text-4xl font-black leading-tight text-white md:text-6xl tracking-tight">
             Empowering Sport Through <span class="text-primary">Community Support</span>
