Add glowing stars image to community section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -332,8 +332,8 @@ const pageDescription = "Join Belfast's premier table tennis club. Professional 
         <div class="order-2 md:order-1 relative">
           <div class="absolute -bottom-4 -right-4 w-2/3 h-2/3 bg-primary/10 rounded-3xl z-0"></div>
           <div class="grid grid-cols-2 gap-4 relative z-10">
-            <img alt="Community Event" class="rounded-2xl w-full h-64 object-cover" src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/540735236_1358210349644165_5176070366626030508_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=106&ccb=1-7&_nc_sid=13d280&_nc_ohc=CD4sUhLKOoQQ7kNvwGum8_6&_nc_oc=Adln0MRW0Q5CUy0fiX9krP2F5YRInpCOnEMhrwY5sRHDhNhqWSSbowpeiW-HaJBCo_2uOFfN4b2-ZNUo3_O-mB_c&_nc_zt=23&_nc_ht=scontent-lhr8-2.xx&_nc_gid=jlJDXAjrpWzroj0ViyrYVA&oh=00_AfsbTJYb6kTDoya7KYfUUkKgGggkCDtqRa3TgdzPIRD3Hw&oe=69A14A16"/>
-            <img alt="Social Play" class="rounded-2xl w-full h-64 object-cover mt-8" src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/504208604_1277110327754168_7764173663901954055_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=13d280&_nc_ohc=kAXb68MowaUQ7kNvwExm_Az&_nc_oc=AdneeJlftFiWniITbOD2gDck7MEabDjHBaRTtByrT6S5pDhurFuf4F3KxuPOzEhLPRAwsFnqao_1DEDkaxVHbn7R&_nc_zt=23&_nc_ht=scontent-lhr8-2.xx&_nc_gid=1BI88OOpaRbzTbZ6OJAL4A&oh=00_Afsg19s2tVuQmkSc7ZkCSE4YLAeJIL7XSMWujNihzDmuoQ&oe=69A15439"/>
+            <img alt="Glowing Stars" class="rounded-2xl w-full h-64 object-cover" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/glowing%20stars.jpg"/>
+            <img alt="Club Community" class="rounded-2xl w-full h-64 object-cover mt-8" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/group%20pic%20hero%20.jpg"/>
           </div>
         </div>
         <div class="order-1 md:order-2">
