Update about page hero image

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -90,7 +90,7 @@ import Layout from '../layouts/Layout.astro';
   <!-- Hero Section -->
   <section class="relative bg-background-dark text-white overflow-hidden">
     <div class="absolute inset-0 bg-black/70 z-10"></div>
-    <div class="absolute inset-0 bg-[url('https://scontent-lhr6-1.xx.fbcdn.net/v/t39.30808-6/493611163_1240799358051932_5339432373782354722_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=13d280&_nc_ohc=rmQeFK1lWgwQ7kNvwHHsGbb&_nc_oc=AdlOiVrToNIBCQNFq69qpga7gXQMfd1HKbJk7BHVaPRq1eoL4e9KbsM3kLwRqL5zadxSWdzSKwNAXtyB9kX7l8OM&_nc_zt=23&_nc_ht=scontent-lhr6-1.xx&_nc_gid=UOPiq4Ie21pl1sXK5zlvdQ&oh=00_AftWrSquitNDDpjziCaG0EHoTtUOXCn4QDC-Tf7UKABFpw&oe=69A11C19')] bg-cover bg-center z-0"></div>
+    <div class="absolute inset-0 bg-[url('https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/first%20world%20record%20.jpg')] bg-cover bg-center z-0"></div>
     <div class="relative z-20 max-w-7xl mx-auto px-6 sm:px-8 lg:px-10 py-32 md:py-40">
       <div class="max-w-3xl">
         <span class="inline-block py-1 px-4 rounded-full bg-primary/20 border border-primary/30 text-primary text-sm font-bold mb-6 uppercase tracking-widest">Est. 2013</span>
