Update team photos and corporate events image

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -197,7 +197,7 @@ import Layout from '../layouts/Layout.astro';
         <a href="/contact" class="inline-block px-8 py-4 bg-primary text-white font-bold rounded-full hover:bg-primary-hover transition-colors shadow-lg shadow-primary/30">Contact Us</a>
       </div>
       <div class="md:w-1/2">
-        <img alt="Community Events" class="rounded-3xl shadow-2xl w-full object-cover aspect-video md:aspect-square" src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/502385260_1272192524912615_6319600157925935361_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=13d280&_nc_ohc=7LnM1826TpMQ7kNvwEmWXAy&_nc_oc=AdngkTA_FU4dk03bBaeyzyhS-XJ4GcR-VGiuBSV6sazYek4sxeJ-RJWY5ru5wnyEpR7iAP6Rc7u6fN-ozcdgXXWZ&_nc_zt=23&_nc_ht=scontent-lhr8-2.xx&_nc_gid=Tqt3qvEmylgK12lwEXEPvg&oh=00_AftxfBu72XcIJmDlEEX4ElXc1_MVGR3tQ9pk3rzFmy2mwg&oe=69A14753"/>
+        <img alt="Corporate Events" class="rounded-3xl shadow-2xl w-full object-cover aspect-video md:aspect-square" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/corporate%20league%20.jpg"/>
       </div>
     </div>
   </section>
