--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -273,7 +273,7 @@ const pageDescription = "Join Belfast's premier table tennis club. Professional 
           </div>
         </div>
         <div class="group relative overflow-hidden rounded-2xl bg-gray-900 aspect-[4/5]">
-          <img alt="Peadar Sheridan" class="absolute inset-0 w-full h-full object-cover opacity-60 group-hover:opacity-90 transition duration-500 scale-100 group-hover:scale-105" src="https://scontent-lhr6-1.xx.fbcdn.net/v/t39.30808-6/638290534_1253115230131717_8670556813026375757_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=13d280&_nc_ohc=iu6if3p5abQQ7kNvwEuxJo_&_nc_oc=Adk0rDIS5fXSst427CLmGbKQFSwRSV78L-FSxA9e-oNvYY1vF-9UITj9JmXp_KVvIx770-73yGSgmPDCjXKbr9mm&_nc_zt=23&_nc_ht=scontent-lhr6-1.xx&_nc_gid=6_xaye8_k4wW5tKLRyUWjg&oh=00_Afs6oArB9_q434wznOt2rXLdAhuxmsCeL2vJkziOLisbJQ&oe=69A1305B"/>
+          <img alt="Peadar Sheridan" class="absolute inset-0 w-full h-full object-cover opacity-60 group-hover:opacity-90 transition duration-500 scale-100 group-hover:scale-105" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/peadar%20.jpg"/>
           <div class="absolute bottom-0 left-0 p-8 w-full bg-gradient-to-t from-black/90 to-transparent">
             <h3 class="text-2xl font-bold">Peadar Sheridan</h3>
             <p class="text-gray-300 text-sm mt-1">European No.1 U13</p>
@@ -310,7 +310,7 @@ const pageDescription = "Join Belfast's premier table tennis club. Professional 
           <span class="material-icons text-6xl text-primary/10 absolute top-6 right-6">format_quote</span>
           <p class="text-gray-600 dark:text-gray-300 mb-6 italic relative z-10">"Ormeau gave me the platform to achieve my dreams. The support from the coaches and the club is why I am where I am today."</p>
           <div class="flex flex-col items-center text-center">
-            <img alt="Peadar Sheridan" class="w-24 h-24 rounded-full object-cover mb-4" src="https://scontent-lhr6-1.xx.fbcdn.net/v/t39.30808-6/638290534_1253115230131717_8670556813026375757_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=13d280&_nc_ohc=iu6if3p5abQQ7kNvwEuxJo_&_nc_oc=Adk0rDIS5fXSst427CLmGbKQFSwRSV78L-FSxA9e-oNvYY1vF-9UITj9JmXp_KVvIx770-73yGSgmPDCjXKbr9mm&_nc_zt=23&_nc_ht=scontent-lhr6-1.xx&_nc_gid=6_xaye8_k4wW5tKLRyUWjg&oh=00_Afs6oArB9_q434wznOt2rXLdAhuxmsCeL2vJkziOLisbJQ&oe=69A1305B"/>
+            <img alt="Peadar Sheridan" class="w-24 h-24 rounded-full object-cover mb-4" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/peadar%20.jpg"/>
             <h4 class="font-bold">Peadar Sheridan</h4>
             <p class="text-xs text-gray-400 uppercase">Pro Player</p>
           </div>
