--- a/src/pages/teams.astro
+++ b/src/pages/teams.astro
@@ -192,7 +192,7 @@ const pageDescription = "Meet the players representing Ormeau Table Tennis Club 
         <!-- Player 4 -->
         <div class="group relative flex flex-col overflow-hidden rounded-xl bg-white shadow-sm transition-all hover:shadow-md hover:ring-2 hover:ring-primary dark:bg-gray-800/50">
           <div class="aspect-[4/5] w-full overflow-hidden bg-gray-200">
-            <img alt="Peadar Sheridan" class="h-full w-full object-cover transition-transform duration-500 group-hover:scale-105" src="https://scontent-lhr6-1.xx.fbcdn.net/v/t39.30808-6/638290534_1253115230131717_8670556813026375757_n.jpg"/>
+            <img alt="Peadar Sheridan" class="h-full w-full object-cover transition-transform duration-500 group-hover:scale-105" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/peadar%20.jpg"/>
           </div>
           <div class="flex flex-1 flex-col p-5">
             <div class="mb-2 flex items-center justify-between">
