--- a/src/pages/teams.astro
+++ b/src/pages/teams.astro
@@ -267,7 +267,7 @@ const pageDescription = "Meet the players representing Ormeau Table Tennis Club 
         <!-- Player 9 -->
         <div class="group relative flex flex-col overflow-hidden rounded-xl bg-white shadow-sm transition-all hover:shadow-md hover:ring-2 hover:ring-primary dark:bg-gray-800/50">
           <div class="aspect-[4/5] w-full overflow-hidden bg-gray-200">
-            <img alt="Thomas Earley" class="h-full w-full object-cover transition-transform duration-500 group-hover:scale-105" src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/540735236_1358210349644165_5176070366626030508_n.jpg"/>
+            <img alt="Thomas Earley" class="h-full w-full object-cover transition-transform duration-500 group-hover:scale-105" src="https://xkwg7luliofrc1cs.public.blob.vercel-storage.com/Images/thomas%20.jpg"/>
           </div>
           <div class="flex flex-1 flex-col p-5">
             <div class="mb-2 flex items-center justify-between">
